# Cabbage

./: .gitlab-ci.yml  CHANGELOG.md  LICENSE  README.de.md  README.es.md  README.fr.md  README.md  README.ru.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs  state.rs
src-tauri/src/core/: fs.rs  index.rs  mod.rs
src-tauri/src/git/: cli.rs
src/lib/: Editor.svelte  GraphView.svelte  HistoryPanel.svelte  api.ts  stores.ts  wikilink.ts
src/lib/stores/: vault.ts
