[package]
name = "cabbage"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "fs-all", "dialog-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3"
regex = "1.9"
chrono = "0.4"
keyring = "2.3"